--- a/Python Projelerim/Mathmoduleexample.ipynb
+++ b/Python Projelerim/Mathmoduleexample.ipynb
@@ -36,7 +36,7 @@
     "    cikar=int(s1-s2)\n",
     "    print(\"sonuc {}\".format(cikar))\n",
     "\n",
-    "def karekökal(sayi):\n",
+    "def karekokal(sayi):\n",
     "    r=sqrt(sayi)\n",
     "    print(\"karesi {}\".format(r))\n",
     "\n",
@@ -49,7 +49,7 @@
     "\n",
     "topla(sayi,sayi2)\n",
     "cikar(sayi,sayi2)\n",
-    "kareal(sayi)\n",
+    "karekokal(sayi)\n",
     "factoriyel(sayi2)\n",
     "cosdegeri(sayi)\n"
    ]
